<?xml version="1.0"?>
<package format="2">
  <name>camera_cone_detection</name>
  <version>0.0.0</version>
  <description>The camera_cone_detection package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="fayo@todo.todo">fayo</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


	<depend>rospy</depend> 
	<depend>roscpp</depend> 
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>aam_common_msgs</depend>
	<depend>visualization_msgs</depend>


  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
